--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -6,3 +6,5 @@
 This is a neat data analysis course. 
 
 Here is a link to my course repo: https://github.com/akaariala/IODS-project
+
+Hmmm. why don't I see changes in my course diary?
