--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "IODS course project"
-author: "Antti K‰‰ri‰l‰"
+author: "Antti K√§√§ri√§l√§"
 output:
   html_document:
     theme: cosmo
