--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "IODS course project"
-author: "Antti K√§√§ri√§l√§"
+author: "Antti K‰‰ri‰l‰"
 output:
   html_document:
     theme: cosmo
@@ -20,6 +20,11 @@ output:
 ***
   
 ```{r child = "chapter2.Rmd"}
+```
+
+***
+  
+```{r child = "chapter3.Rmd"}
 ```
 
 ***
