--- a/chapter4.Rmd
+++ b/chapter4.Rmd
@@ -8,6 +8,7 @@ library(tidyverse)
 library(GGally)
 library(MASS)
 library(corrplot)
+library(plotly)
 
 boston <- as_tibble(MASS::Boston)
 
@@ -115,7 +116,7 @@ lda.arrows(lda.fit, myscale = 20)
 
 Using test data set to predict the classes with the LDA model. 
 
-The corsstable below shows how well the LDA model predicts the crime rate in Boston suburbs. The LDA model is very accurate in predicting suburbs with high crime. Additionally, concerning suburbs with actual crime rate from low to medium high, the LDA model predicts crime rate rather accurately in the same region even if the prediction is not as accurate as with suburbs with high crome rate. 
+The crosstable below shows how well the LDA model predicts the crime rate in Boston suburbs. The LDA model is very accurate in predicting suburbs with high crime. Additionally, concerning suburbs with actual crime rate from low to medium high, the LDA model predicts crime rate rather accurately in the same region even if the prediction is not as accurate as with suburbs with high crime rate. 
 
 ```{r}
 
@@ -146,7 +147,7 @@ summary(dist_eu)
 
 ```
 
-Here is the first set of k-means clustering done with four clusters. For easier inspection, I only plotted tohe pairs of firts six variables in the data set.
+Here is the first set of k-means clustering done with four clusters. For easier inspection, I only plotted the pairs of firts six variables in the data set.
 
 ```{r}
 
@@ -180,6 +181,51 @@ km <-kmeans(boston_scaled, centers = 2)
 
 # plot the Boston dataset with clusters
 pairs(boston_scaled[1:6], col = km$cluster)
+
+```
+
+### Super bonus
+
+Preparing the data. 
+
+```{r}
+
+model_predictors <- dplyr::select(train, -crim)
+
+# check the dimensions
+dim(model_predictors)
+dim(lda.fit$scaling)
+
+```
+
+The figure below plots the fitted LDA model in three dimensions. 
+
+```{r}
+
+# matrix multiplication
+matrix_product <- as.matrix(model_predictors) %*% lda.fit$scaling
+matrix_product <- as.data.frame(matrix_product)
+
+plot_ly(x = matrix_product$LD1, y = matrix_product$LD2, z = matrix_product$LD3, type = 'scatter3d', mode = 'markers', colors = "Dark2")
+
+```
+
+Here is the same plot with the colors of the points representing crime rates of Boston suburbs. 
+
+```{r}
+
+plot_ly(x = matrix_product$LD1, y = matrix_product$LD2, z = matrix_product$LD3, type = 'scatter3d', mode = 'markers', color = train$crim, colors = "Dark2")
+
+```
+
+Lastly, I did the same plot but this time the points are colored by using the two categories found in the k-means clustering exercise. Comparing the two last plots visually shows that k-means clustering identified those suburbs (green dots) that had high or medium high crime rate in the previous plot. This works as a one way to validate the k-means clustering categories.
+
+```{r}
+
+km <-kmeans(boston_scaled[2:14], centers = 2)
+clusters <- factor(km$cluster[ind])
+
+plot_ly(x = matrix_product$LD1, y = matrix_product$LD2, z = matrix_product$LD3, type = 'scatter3d', mode = 'markers', color = clusters, colors = "Dark2")
 
 ```
 
